Desenvolvido sistema de batalha

--- a/battle.html
+++ b/battle.html
@@ -16,7 +16,6 @@
 
     <link rel="stylesheet" href="src/styles/battle/main.css">
     <link rel="stylesheet" href="src/styles/loading/loading.css">
-    <link rel="stylesheet" href="src/styles/battle/main_characters.css">
     <link rel="stylesheet" href="src/styles/battle/cards.css">
     <link rel="stylesheet" href="src/styles/battle/bottom_bar.css">
     <link rel="stylesheet" href="src/styles/battle/victory_screen.css">
@@ -158,7 +157,7 @@
                         <div class="card__display">
                             <img draggable="false" src="src/assets/robot-cat.png" alt="">
                         </div>
-                        <div class="card__red__hp">
+                        <div class="ally__red__hp">
                             <div id="ally-hp" class="ally__green__hp">
                                 <div id="ally-hp-points" class="ally__hp__points">10</div>
                             </div>
@@ -171,7 +170,7 @@
                         <div class="card__display">
                             <img draggable="false" src="src/assets/robot-cat.png" alt="">
                         </div>
-                        <div class="card__red__hp">
+                        <div class="ally__red__hp">
                             <div id="ally-hp" class="ally__green__hp">
                                 <div id="ally-hp-points" class="ally__hp__points">10</div>
                             </div>
@@ -184,7 +183,7 @@
                         <div class="card__display">
                             <img draggable="false" src="src/assets/robot-cat.png" alt="">
                         </div>
-                        <div class="card__red__hp">
+                        <div class="ally__red__hp">
                             <div id="ally-hp" class="ally__green__hp">
                                 <div id="ally-hp-points" class="ally__hp__points">10</div>
                             </div>
@@ -200,9 +199,9 @@
                         <div class="card__display">
                             <img draggable="false" src="src/assets/robot-cat.png" alt="">
                         </div>
-                        <div class="card__red__hp">
-                            <div id="enemy-hp" class="card__green__hp">
-                                <div id="enemy-hp-points" class="card__hp__points">10/10</div>
+                        <div class="enemy__red__hp">
+                            <div id="enemy-hp" class="enemy__green__hp">
+                                <div id="enemy-hp-points" class="enemy__hp__points">10/10</div>
                             </div>
                         </div>
                     </div>
@@ -213,9 +212,9 @@
                         <div class="card__display">
                             <img draggable="false" src="src/assets/robot-cat.png" alt="">
                         </div>
-                        <div class="card__red__hp">
-                            <div id="enemy-hp" class="card__green__hp">
-                                <div id="enemy-hp-points" class="card__hp__points">10/10</div>
+                        <div class="enemy__red__hp">
+                            <div id="enemy-hp" class="enemy__green__hp">
+                                <div id="enemy-hp-points" class="enemy__hp__points">10/10</div>
                             </div>
                         </div>
                     </div>
@@ -226,9 +225,9 @@
                         <div class="card__display">
                             <img draggable="false" src="src/assets/robot-cat.png" alt="">
                         </div>
-                        <div class="card__red__hp">
-                            <div id="enemy-hp" class="card__green__hp">
-                                <div id="enemy-hp-points" class="card__hp__points">10/10</div>
+                        <div class="enemy__red__hp">
+                            <div id="enemy-hp" class="enemy__green__hp">
+                                <div id="enemy-hp-points" class="enemy__hp__points">10/10</div>
                             </div>
                         </div>
                     </div>
@@ -259,19 +258,6 @@
                 <div id="character-ui" class="character__ui">
 
                     <div id="main-character-bars-container">
-                        <div class="character__red__hp">
-                            <div class="character__green__hp">
-                                <div class="character__hp__points">10/10</div>
-                            </div>
-                        </div>
-                        <div class="character__mana__empty">
-                            <div class="character__mana__value">
-                                <div class="character__mana__points">10/10</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div id="main-tutorial-bars-container">
                         <div class="character__red__hp">
                             <div class="character__green__hp">
                                 <div class="character__hp__points">10/10</div>
