Desenvolvido o sistema de batalha, agora os inimigos podem atacar independentemente uns dos outros, corrigido bug de inimigos do modo infinito atacando aliados já mortos e adicionado novos monstros à pasta assets

--- a/battle.html
+++ b/battle.html
@@ -59,7 +59,7 @@
             <h2 class="robot__cat__name">Cat</h2>
             <h3 class="robot__cat__title">A Robot Cat</h3>
         </div>
-        <img class="robot__cat__img" src="src/assets/robot-cat.png" alt="">
+        <img class="robot__cat__img" src="src/assets/robot-cat-1.png" alt="">
 
         <button class="robot__cat__banner__share__button">Share</button>
     </div>
@@ -150,12 +150,12 @@
     <div id="main-content" class="main">
         <div class="container">
 
-            <div class="ally__field">
+            <div id="ally-field" class="ally__field">
 
                 <div draggable="false" class="card__container ally">
                     <div class="card__body">
                         <div class="card__display">
-                            <img draggable="false" src="src/assets/robot-cat.png" alt="">
+                            <img draggable="false" src="src/assets/robot-cat-1.png" alt="">
                         </div>
                         <div class="ally__red__hp">
                             <div id="ally-hp" class="ally__green__hp">
@@ -168,7 +168,7 @@
                 <div draggable="false" class="card__container ally">
                     <div class="card__body">
                         <div class="card__display">
-                            <img draggable="false" src="src/assets/robot-cat.png" alt="">
+                            <img draggable="false" src="src/assets/robot-cat-1.png" alt="">
                         </div>
                         <div class="ally__red__hp">
                             <div id="ally-hp" class="ally__green__hp">
@@ -178,18 +178,10 @@
                     </div>
                 </div>
 
-                <div draggable="false" class="card__container ally">
-                    <div class="card__body">
-                        <div class="card__display">
-                            <img draggable="false" src="src/assets/robot-cat.png" alt="">
-                        </div>
-                        <div class="ally__red__hp">
-                            <div id="ally-hp" class="ally__green__hp">
-                                <div id="ally-hp-points" class="ally__hp__points">10</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </div>
+
+            <div id="card-holder" class="column">
+                
             </div>
 
             <div id="monster-field">
@@ -197,7 +189,7 @@
                 <div draggable="false" class="card__container enemy">
                     <div class="card__body">
                         <div class="card__display">
-                            <img draggable="false" src="src/assets/robot-cat.png" alt="">
+                            <img draggable="false" src="src/assets/monster-plants-1.png" alt="">
                         </div>
                         <div class="enemy__red__hp">
                             <div id="enemy-hp" class="enemy__green__hp">
@@ -210,7 +202,7 @@
                 <div draggable="false" class="card__container enemy">
                     <div class="card__body">
                         <div class="card__display">
-                            <img draggable="false" src="src/assets/robot-cat.png" alt="">
+                            <img draggable="false" src="src/assets/monster-plants-1.png" alt="">
                         </div>
                         <div class="enemy__red__hp">
                             <div id="enemy-hp" class="enemy__green__hp">
@@ -223,7 +215,7 @@
                 <div draggable="false" class="card__container enemy">
                     <div class="card__body">
                         <div class="card__display">
-                            <img draggable="false" src="src/assets/robot-cat.png" alt="">
+                            <img draggable="false" src="src/assets/monster-plants-1.png" alt="">
                         </div>
                         <div class="enemy__red__hp">
                             <div id="enemy-hp" class="enemy__green__hp">
