Desenvolvido animação de super forma

--- a/battle.html
+++ b/battle.html
@@ -149,6 +149,13 @@
         </div>
     </div>
 
+    <div id="super-form-background">
+        <div id="super-form-status">
+            <span id="super-form-health">Health: </span>
+            <span id="super-form-damage">Damage: </span>
+        </div>
+    </div>
+
     <div id="main-content" class="main">
 
         <audio id="super-form-music" class="super__form__music">
